# FamilyTree

./: .gitignore  .travis.yml  README.md  README.org  docker-compose.dev.yaml  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  haproxy.cfg  workspace.code-workspace
.github/workflows/: build_and_test.yaml  docker-image.yml  rust.yaml
auth/: .env  Cargo.toml  Dockerfile  README.md
auth/migrations/2021-12-13-023802_add_users/: down.sql  up.sql
auth/src/: main.rs
auth/src/user_handling/: auth.rs  handlers.rs  mod.rs  models.rs  routes.rs  schema.rs
docker-inits/: init-user-db.sh
fam_tree_rest_api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.deprecated
fam_tree_rest_api/api/: Cargo.toml  openapi.yaml
fam_tree_rest_api/api/src/: errors.rs  lib.rs  main.rs  middleware.rs
fam_tree_rest_api/api/src/controller/: api_docs.rs  default_route.rs  family_controller.rs  health_controller.rs  individuals_controller.rs  mod.rs  relationships_controller.rs
fam_tree_rest_api/api/src/dal/: db_context.rs  family_dal.rs  individual_dal.rs  mod.rs  relationship_dal.rs
fam_tree_rest_api/api/src/models/: fam_tree.rs  families.rs  individuals.rs  mod.rs  relationships.rs
fam_tree_rest_api/config/src/: lib.rs
fam_tree_rest_api/docker-inits/: init-user-db.sh
fam_tree_rest_api/migrations/: 001_tables.sql  002_dataset.sql  002_second.sql  003_test_data.sql
fam_tree_rest_api/migrator/: Cargo.toml
fam_tree_rest_api/migrator/src/: main.rs
frontend/: .env.template  .gitignore  Dockerfile  Dockerfile.prod  cypress.json  package-lock.json  package.json  tsconfig.json
frontend/cypress/: tsconfig.json
frontend/cypress/integration/: TreeView.spec.js  UserForm.spec.js
frontend/cypress/integration/AddPersonForm/: AddPersonModalStructure.js
frontend/cypress/support/: commands.js
frontend/cypress/tools/: allFormInputErrors.ts  isInputErrorByLabel.ts
frontend/public/: index.html
frontend/src/: index.tsx  styled.d.ts
frontend/src/components/App/: App.components.tsx  App.tsx
frontend/src/components/FirstPersonTile/: FirstPersonTile.components.tsx  FirstPersonTile.tsx  index.tsx
frontend/src/components/Header/: Header.components.tsx  Header.tsx
frontend/src/components/Loader/: Loader.components.tsx  Loader.tsx
frontend/src/components/Main/: Main.components.tsx  Main.tsx
frontend/src/components/PersonTile/: PersonTile.components.tsx  PersonTile.tsx  index.tsx
frontend/src/components/PersonTile/__test__/: PersonTile.test.tsx
frontend/src/components/TreePanel/: TreePanel.components.tsx  TreePanel.tsx  index.tsx
frontend/src/components/UserForm/: UserForm.components.tsx  UserForm.tsx
frontend/src/context/TreeContext/: Tree.context.ts  TreeContext.provider.tsx  useTreeContext.ts
frontend/src/context/UserContext/: User.context.ts  UserContext.provider.tsx  useUserContext.ts
frontend/src/styles/: global.styles.ts  mixins.ts  theme.ts
frontend/src/utils/: auth.routes.ts  toast.ids.ts  tree.routes.ts
frontend/src/utils/formConsts/: addPersonForm.consts.ts  userForm.consts.ts
frontend/src/utils/functions/: dateToString.ts  findPerson.ts  handleErrorMssg.ts  relationToStr.ts  roleToStr.ts
frontend/src/utils/typeGuards/: isAxiosError.guard.ts  isDeleteError.guard.ts
frontend/src/utils/types/: addPersonInputs.type.ts  relationOptions.type.ts  treeContext.type.ts
integration_tests/: .pylintrc  conftest.py  requirements.txt  test_creating_getting_fam_tree.py  test_genealogy_api_auth_middleware.py
minio_api/: Cargo.toml  Dockerfile
minio_api/src/: main.rs  models.rs  routes.rs
(+56 files in other folders)
