[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.0.0"
serde = "1.0.105"
serde_json = "1.0.48"
jsonwebtoken = "7.1.0"
envfile = "0.2.1"
chrono = "0.4.11"
futures = "0.3.4"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.8"
lazy_static = "1.4.0"
rust-crypto = "0.2.36"