[package]
name = "minio_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
actix-web = "4.0.0-beta.16"
serde = "1.0.105"
rust-s3 = { version = "0.28.0", features = ["no-verify-ssl"] }
image = "0.23.14"
lazy_static = "1.4.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }