[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "api"
path = "src/main.rs"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
actix-web = "4.0.0-beta.5"
sqlx = { version = "0.5.7", features = ["postgres", "runtime-actix-native-tls", "chrono", "macros"] }
# sqlx-cli = { version = "0.5.9", features = ["postgres"] }
serde = "1.0.117"
serde_json = "1.0.59"
futures = "0.3.17"
http-serde = "1.0.3"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.14"
derive_more = "0.99.16"
config = { path = "../config" }
