[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "api"
path = "src/main.rs"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
actix-web = "=4.0.0-beta.16"
reqwest = { version = "0.11.7", features = ["blocking"] }
actix-files = "0.6.0-beta.10"
sqlx = { version = "0.5.7", features = ["postgres", "runtime-actix-native-tls", "chrono", "macros"] }
serde = "1.0.117"
serde_json = "1.0.59"
futures = "0.3.17"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.14"
anyhow = "1.0.52"
thiserror = "1.0.30"
paperclip = { version = "0.6.1", features = ["actix"] }
config = { path = "../config" }
