[package]
name = "migrator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.9", features = ["postgres", "runtime-actix-native-tls", "migrate"] }
config = { path = "../config" }
futures = "0.3.17"
tokio = { version = "1.12.0", features = ["macros"] }
